[tool.poetry]
name = "keyb-listen"
version = "0.1.0"
description = ""
authors = ["Andrey <spoon3847@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
keyboard = "^0.13.5"
pyautogui = "^0.9.54"
pillow = "^10.4.0"
aiogram = "^3.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
